# jornet

./: .env  .gitignore  Cargo.toml  README.md  configuration.dhall  configuration_types.dhall  configuration_with_key.dhall
.github/: dependabot.yml
.github/workflows/: ci.yml  server-release.yml
bevy-jornet/: Cargo.toml  README.md
bevy-jornet/examples/: bevy_ui.rs  whac-a-square.rs
bevy-jornet/src/: http.rs  leaderboards.rs  lib.rs
jornet-cli/: Cargo.toml
jornet-cli/src/: main.rs
jornet-server/: .clever.json  Cargo.toml  configuration.dhall  configuration_types.dhall
jornet-server-ui/: elm.json  package-lock.json  package.json
jornet-server-ui/public/: index.html
jornet-server-ui/src/: App.tsx  Connect.tsx  Dashboard.tsx  Home.elm  Landing.tsx  Login.elm  Main.elm  Messages.elm
jornet-server-ui/src/Page/: Home.elm  Login.elm
jornet-server-ui/src/pages/: connect.tsx  dashboard.tsx  landing.tsx  leaderboard.tsx
jornet-server/.sqlx/: query-0c37cff43c44e0301f745cd2fad2e281a6ce9b192e887a28c0347658a503ae1e.json  query-3eb54c6180957f19f9e339f7352466678bbcc7330ddb44ad4651e6dd16694496.json  query-3ebfda5d6c26fd2115d3a6ccd13b040556b288934aebd8f1b4d6f218847acdef.json  query-4315b62114b0e588664acfcbd3ecf031228bed27be4ec7517d39435b59ca0aae.json  query-4a932e13bc9ab451348a564bfe29364b235270e798cf44350da28aa9a4287aa1.json  query-5bd691a07a6a1fff969a952bbb3aef10d1e30e0bfa974ce31807e1ec12ca6894.json  query-6645a2fb14318558e99669bfa0d4c84458f689c12af8d50175282845155e1578.json  query-72523289578360f65dd2977eb633c357e18350b269e17d5ec967a7203d8ef01c.json  query-7f5f8834589e0e4b60ebbf58a60878de26134dfb24ac100ab849b06c5b97b8c8.json  query-8a8e89c8ee414a4e2fab97d7f49024d254329c8a9ac878e05c453d48e1e0f128.json  query-9fa9bc209337ba894550c0283f0eba8acc69c853567d5da86e93ff7bfa60ea63.json  query-c16d2cd53148d7647c56a66ec75478bf1a760e92a897f08c2107cfeddbd128a5.json  query-ca21d2683d35eaad506c2b020a343a69574ebf786075476dfa4a001b339f944a.json  query-ccee23e9893b908e375644261f9ecc714f99f91717aada061c68b16814960ab7.json  query-d5e56a03e8b0c117b29047abf20b4bc889bae5b365fda01a2f0b8f6a0839ca0e.json  query-e68481e60222376c1fb43deb5e74558b7f7c0508f9df8ae05a11121084209f5d.json  query-f87fd209dd64159922c89fff8fd39dcfacfbf069f33e7d895c52b730e4e64896.json
jornet-server/migrations/: 20220705103321_create_admin_table.sql  20220706194612_create_admin_github_table.sql  20220714142543_create_leaderboard_table.sql  20220719231217_create_score_table.sql  20220729170417_create_player_table.sql  20220730031818_alter_leaderboard_add_key.sql  20220731162802_alter_player_add_creation_date.sql
jornet-server/src/: auth_admin.rs  configuration.rs  lib.rs  main.rs  random_name.rs
jornet-server/src/domains/: admin.rs  admin_site.rs  admins.rs  config.rs  leaderboard.rs  mod.rs  oauth.rs  player.rs  score.rs
jornet-server/static/: .gitignore
jornet-server/tests/: admin.rs  admins.rs  helper.rs  leaderboard.rs  player.rs  score.rs  score_1.rs  score_2.rs  score_3.rs
migrations/: 20220705103321_create_admin_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/domains/: admin.rs  healthcheck.rs  mod.rs  test_bed.rs
static/: asset-manifest.json  demo_leaderboard.js  index.html
static/static/css/: main.580a51e2.css  main.580a51e2.css.map  main.f768fceb.css  main.f768fceb.css.map
static/static/js/: 488.ff5e5f1e.chunk.js  488.ff5e5f1e.chunk.js.map  787.c822083b.chunk.js  787.c822083b.chunk.js.map  main.2d580f54.js  main.769d420f.js  main.769d420f.js.LICENSE.txt  main.769d420f.js.map  main.7f9b6f64.js  main.7f9b6f64.js.LICENSE.txt  main.e9d14b74.js
tests/: admins.rs  auth.rs  health_check.rs  helper.rs  test_bed.rs
