[package]
name = "bevy_jornet"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for Jornet - a social game server"
categories = ["game-development"]
keywords = ["bevy", "social", "leaderboard", "score"]
exclude = ["assets/", "leaderboard.png"]
repository = "https://github.com/vleue/jornet/tree/main/bevy-jornet"
homepage = "https://jornet.vleue.com"
documentation = "https://docs.rs/bevy_jornet"

[dependencies.bevy]
version = "0.8.1"
# git = "https://github.com/bevyengine/bevy"
default-features = false

[dependencies]
uuid = { version = "1.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.5", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["Request", "Window", "Response", "Headers", "RequestInit"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies.bevy]
version = "0.8.0"
# git = "https://github.com/bevyengine/bevy"
default-features = false
features = ["bevy_winit", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_asset"]

[dev-dependencies]
rand = "0.8"
