[package]
name = "jornet-server"
version = "0.1.40"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
actix-web = "4.8"
actix-web-httpauth = "0.8"
actix-files = "0.6"
actix-cors = "0.7"
biscuit-auth = "4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_dhall = "0.12"
uuid = { version = "1.8", features = ["v4", "serde"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
time = { version = "*" }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time"]

[dev-dependencies]
sqlx = { version = "0.7", default-features = false, features = ["migrate"] }
